Restore Java 11 compatibility